<resources>
    <string name="app_name">20first</string>
    <string name="description">a persons image</string>
    <string name="App_ID">ca-app-pub-4376907170893348~8592812174</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_group_date">Create group date</string>
    <string name="post_photo">Post photo</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="invited">invited</string>

</resources>